# Cosylang

./: .gitattributes  .gitignore  .lydia-lang.cpp.swo  .lydia-lang.cpp.swp  CMakeLists.txt  README.md  cosyla-lexer.cpp  justfile  lydia-lang.cpp  myprog  some.asm  test
docs/ru/: for-beginners.md  main.md
frontend/code/: checkOperationsTypes.cpp  convertor.cpp  lexer.cpp  node.cpp  parser.cpp  token.cpp
frontend/code/algorithms/: sillySearch.cpp
frontend/code/lexer/: lexer.cpp  token.cpp
frontend/code/parser/: checkOperationsTypes.cpp  nodeCreator.cpp  parser.cpp  reporter.cpp  termParser.cpp
frontend/code/parser/ast/: nodesList.cpp
frontend/code/semantic/: functionFlags.cpp  semantic.cpp  typechecker.cpp
frontend/code/sematic/: checkers.cpp  declarations.cpp  declarationsStructureCheckers.cpp  functionFlags.cpp  semantic.cpp  typechecker.cpp
frontend/head/: convertor.hpp  lexer.hpp  node.hpp  nodeCreator.hpp  parser.hpp  token.hpp
frontend/head/algorithms/: sillySearch.hpp
frontend/head/ast/: nodesList.hpp
frontend/head/errors/: throwError.hpp
frontend/head/parser/: nodeCreator.hpp  parser.hpp  reporterHolder.hpp
frontend/head/semantic/: checkers.hpp  declarations.hpp  semantic.hpp  symbol.hpp  symbolTable.hpp  typechecker.hpp  types.hpp
frontend/tests/: testParser.cpp
src/frontend/code/lexer/: lexer.cpp
src/frontend/code/parser/: nodeCreator.cpp  parser.cpp  parserDoc.md  reporter.cpp
src/frontend/code/semantic/: astToSymbolConverter.cpp  declarationsStructureCheckers.cpp  nodeVisitor.cpp  scope.cpp  semanticAnalyzer.cpp
src/frontend/head/: checkOperationsTypes.hpp  node.hpp  nodeCreator.hpp  parser.hpp  reporter.hpp  token.hpp
src/frontend/head/algorithms/: sillySearch.hpp
src/frontend/head/parser/: checkOperationsTypes.hpp
src/frontend/head/semantic/: astToSymbolConverter.hpp  cosylangValue.hpp  declaration.hpp  defineTypeByName.hpp  isTypeNode.hpp  kinds.hpp  nodeVisitor.hpp  (+6 more)
texts/: LICENSE  README.md  cosylang-keywords.txt  cosylang-types-of-data.txt  demo.cosy
